--- a/.htaccess
+++ b/.htaccess
@@ -16,3 +16,20 @@ RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 order allow,deny
 deny from all
 </Files>
+
+## EXPIRES CACHING ##
+<IfModule mod_expires.c>
+ExpiresActive On
+ExpiresByType image/jpg "access 1 year"
+ExpiresByType image/jpeg "access 1 year"
+ExpiresByType image/gif "access 1 year"
+ExpiresByType image/png "access 1 year"
+ExpiresByType text/css "access 1 minutes"
+ExpiresByType text/html "access 1 month"
+ExpiresByType application/pdf "access 1 month"
+ExpiresByType text/x-javascript "access 1 minutes"
+ExpiresByType application/x-shockwave-flash "access 1 minutes"
+ExpiresByType image/x-icon "access 1 minutes"
+ExpiresDefault "access 1 minutes"
+</IfModule>
+## EXPIRES CACHING ##
